[package]
name = "max-rust-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "max_rust"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "50.0.0", features = ["pyarrow"] }
pyo3 = "0.20.0"
